tools/infrastructure/container-based/ochestration/kubernetes/bases/backend/deployment-horizon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: horizon
  name: horizon
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: horizon
  template:
    metadata:
      labels:
        app: horizon
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: backend-config
          image: laravel-starter
          imagePullPolicy: Always
          name: horizon
          command:
            - /bin/bash
            - -c
            - php artisan horizon
          lifecycle:
            preStop:
              exec:
                command: ["/usr/local/bin/php", "artisan", "horizon:terminate"]
          resources:
            limits:
              cpu: 200m
              memory: 1G
            requests:
              cpu: 100m
              memory: 500M
