tools/infrastructure/container-based/ochestration/kubernetes/bases/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-starter-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Project=laravel-starter"
spec:
  selector:
    app: laravel-starter
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - port: 6379
